# cmake_vcpkg_devcontainer

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  main.cpp  main.cxx  vcpkg.json
